# sqlalchemy-pgspider

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py  test.py
sqlalchemy_pgspider/: __init__.py  psycopg2.py
tests/: conftest.py  test_create_engine.py  test_get_server_version_info.py
